# optimpl

./: CMakeLists.txt  GanjaStrImpl.cpp  GanjaStrOut  README.md  build.sh  buildTestFiles.sh  clean.sh  run.sh  startTests.sh
.github/workflows/: cmake.yml
include/CPPPY/: string.h
include/PYICPP/: int.h  string.h  string.hpp
include/PYICPP/utils/str/: basic.hpp
include/optimpl/: len.hpp  list.hpp  logr.hpp  optimpl.hpp  str.hpp
include/optimpl/internal/: list.hpp  logr.hpp  str.hpp
tests/: a.out  main.cpp  string.cpp  teststr.cpp  teststr.hpp  teststring.cpp
